--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,18 @@
     "target-dir": "Zend/Mail",
     "require": {
         "php": ">=5.3.3",
+        "zendframework/zend-crypt": "self.version",
         "zendframework/zend-loader": "self.version",
         "zendframework/zend-mime": "self.version",
         "zendframework/zend-stdlib": "self.version"
     },
+    "require-dev": {
+        "zendframework/zend-servicemanager": "self.version",
+        "zendframework/zend-validator": "self.version"
+    },
     "suggest": {
-        "zendframework/zend-validator": "Zend\\Validator component",
-        "zendframework/zend-servicemanager": "Zend\\ServiceManager component"
+        "zendframework/zend-servicemanager": "Zend\\ServiceManager component",
+        "zendframework/zend-validator": "Zend\\Validator component"
     },
     "extra": {
         "branch-alias": {
