--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "target-dir": "Zend/Mail",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-crypt": "self.version",
-        "zendframework/zend-loader": "self.version",
-        "zendframework/zend-mime": "self.version",
-        "zendframework/zend-stdlib": "self.version"
+        "zendframework/zend-crypt": "2.2.5",
+        "zendframework/zend-loader": "2.2.5",
+        "zendframework/zend-mime": "2.2.5",
+        "zendframework/zend-stdlib": "2.2.5"
     },
     "suggest": {
         "zendframework/zend-validator": "Zend\\Validator component",
